--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@ h4 span{
     border-radius: 50px;
     text-align: center;
     width: 23px;
-    padding-left: 2px;
+    padding-left: 3px;
 }
 
 .info-container{
@@ -145,4 +145,9 @@ h4 span{
 .tracks ul li p, .tracks ul li h4 {
     margin-left: 10px;
     font-size: 18px;
+}
+
+.tracks ul li h4:hover{
+    text-decoration: underline;
+    cursor:pointer;
 }
