--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,10 @@ h4 span{
     padding-left: 3px;
 }
 
+h4 a{
+    color:black;
+}
+
 .info-container{
     width: 50%;
     padding-top: 20px;
@@ -145,9 +149,4 @@ h4 span{
 .tracks ul li p, .tracks ul li h4 {
     margin-left: 10px;
     font-size: 18px;
-}
-
-.tracks ul li h4:hover{
-    text-decoration: underline;
-    cursor:pointer;
 }
